Added ELK stack for logging

--- a/flywaydb.conf
+++ b/flywaydb.conf
@@ -1,3 +1,3 @@
 flyway.user=root
-flyway.password=mis-bolas-33
+flyway.password=MyrootP@swoord1!
 flyway.url=jdbc:mysql://localhost:3306/spring-oauth2?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
