--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 version: '3.8'
-name: demo-spring-compose
+name: spring-oauth2-compose
 
 services:
 
@@ -9,7 +9,7 @@ services:
     restart: unless-stopped
     environment:
       MYSQL_ROOT_PASSWORD: MyrootP@swoord1!
-      MYSQL_DATABASE: demo-spring
+      MYSQL_DATABASE: spring-oauth2
       MYSQL_USER: user
       MYSQL_PASSWORD: pass
     ports:
@@ -34,10 +34,31 @@ services:
         condition: service_healthy
 
     environment:
-      MYSQL_URL: "jdbc:mysql://mysql:3306/demo-spring?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC"
+      MYSQL_URL: "jdbc:mysql://mysql:3306/spring-oauth2?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC"
       MYSQL_USER: root
       MYSQL_PASS: MyrootP@swoord1!
     command: /bin/bash
+
+  logstash:
+    image: docker.elastic.co/logstash/logstash:7.10.0
+    volumes:
+      - ./logstash.conf:/usr/share/logstash/pipeline/logstash.conf
+    ports:
+      - "5000:5000"
+
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.10.0
+    environment:
+      - discovery.type=single-node
+    ports:
+      - "9200:9200"
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana:7.10.0
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+    ports:
+      - "5601:5601"
 
 volumes:
   mysql_data_prod:
